--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <div class="text-box">
                 <h1 class="heading-primary">
                     <span class="heading-primary-main"> Outdoors</span>
-                    <span class="heading-primary-sub"> Where life happens</span>
+                    <span class="heading-primary-sub"> Is Where life happens</span>
                 </h1>
+                <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
             </div>
         </header>
     </body>
