--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             </section>
 
             <section class="section-tours">
+
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most Popular Tours
@@ -210,6 +211,63 @@
                     <a href="#" class="btn btn--green"> Discover all tours</a>
                 </div>
 
+            </section>
+            <section class="section-story">
+
+                <div class="bg-video">
+                    <video  class="bg-video__content" autoplay  muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm">
+                            Your browser is not supported!
+                    </video>
+                </div>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                       We make people genuinely happy
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">
+                                Merry Brandybuck
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                I had the best weekend ever with my best bro hobbits 
+                            </h3>
+                            <p >
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perferendis veniam ex iure magni fugit odio tempore explicabo, voluptate voluptatibus? Maiores nam minima repellendus repudiandae reiciendis. Nulla nam et animi?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <figcaption class="story__caption">
+                                Pippin Took
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                WOW!  My life is completly different now
+                            </h3>
+                            <p >
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet perferendis veniam ex iure magni fugit odio tempore explicabo, voluptate voluptatibus? Maiores nam minima repellendus repudiandae reiciendis. Nulla nam et animi?
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                        <a href="#" class="btn btn-text"> Read all stories &rarr;</a>
+                    </div>
             </section>
         </main>
 
