--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
                                 </h2>
                             </div>
                             <form action="#" class="from">
+
                                 <div class="form__group">
                                     <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                                     <label for="name" class="form__label">Full Name</label>
@@ -288,7 +289,33 @@
                                 <div class="form__group">
                                         <input type="email" class="form__input" placeholder="Your Email" id="email" required>
                                         <label for="email" class="form__label">Your Email</label>
+                                </div>
+
+                                <div class="form__group u-margin-bottom-medium">
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="small" name="size">
+                                        <label for="small" class="form__radio-label">
+                                            <span class="form__radio-button">
+
+                                            </span>
+                                            Small tour group
+                                        </label>
                                     </div>
+
+                                    <div class="form__radio-group">
+                                        <input type="radio" class="form__radio-input" id="large" name="size">
+                                        <label for="large" class="form__radio-label">
+                                            <span class="form__radio-button">
+                                            
+                                            </span>
+                                            Large tour group
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form__group">
+                                    <button class="btn btn--green">Next Step &rarr;</button>
+                                </div>
+
                             </form>
                         </div>     
                     </div>
