--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <i class="feature-box__icon icon-basic-world"></i>
                              <h3 class="heading-tertiary u-margin-bottom-small"> Explore the World</h3>
                              <p class="feature-box__text"
-                                >LBUTTTTorem ipsum, dolor .
+                                >Lorem ipsum, dolor .
                             </p>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                             <i class="feature-box__icon icon-basic-compass"></i>
                              <h3 class="heading-tertiary u-margin-bottom-small"> Meet Nature</h3>
                              <p class="feature-box__text"
-                                >LBUTTTTorem ipsum, dolor .
+                                >Lorem ipsum, dolor .
                             </p>
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                             <i class="feature-box__icon icon-basic-map"></i>
                              <h3 class="heading-tertiary u-margin-bottom-small"> Find Da Way</h3>
                              <p class="feature-box__text"
-                                >LBUTTTTorem ipsum, dolor .
+                                >Lorem ipsum, dolor .
                             </p>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                             <i class="feature-box__icon icon-basic-heart"></i>
                              <h3 class="heading-tertiary u-margin-bottom-small"> Live a Healthier Life</h3>
                              <p class="feature-box__text"
-                                >LBUTTTTorem ipsum, dolor .
+                                >Lorem ipsum, dolor .
                             </p>
                         </div>
                     </div>
@@ -315,13 +315,38 @@
                                 <div class="form__group">
                                     <button class="btn btn--green">Next Step &rarr;</button>
                                 </div>
-
                             </form>
                         </div>     
                     </div>
                 </div>
             </section>
         </main>
+
+        <footer class="footer">
+            <div class="footer__logo-box">
+                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">    
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    <div class="footer__navigation">
+                        <ul class="footer__list">
+                            <li class="footer__item"><a href="" class="footer__link">Company</a></li>
+                            <li class="footer__item"><a href="" class="footer__link">Contact Us</a></li>
+                            <li class="footer__item"><a href="" class="footer__link">Careers</a></li>
+                            <li class="footer__item"><a href="" class="footer__link">Policy</a></li>
+                            <li class="footer__item"><a href="" class="footer__link">Privacy Policy</a></li>
+                            <li class="footer__item"><a href="" class="footer__link">Terms</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-1-of-2">
+                    <p class="footer__copyright">
+                        Built by <a href="https://github.com/Henelllis" class="footer__link"> Henry Ellis </a> Used Udemy Course <a href="https://www.udemy.com/advanced-css-and-sass/" class="footer__link"> Advance CSS and Sass </a>instructed by Jonas Schmedtmann. The design of this site is done by <a href="https://www.udemy.com/user/jonasschmedtmann/
+                        " class="footer__link"> Jonas Schmedtman </a>. 
+                    </p>
+                </div>
+            </div>
+        </footer>
 
         <!-- <section class="grid">
             <div class="row">
