--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
 
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
@@ -155,7 +155,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now</a>
+                                    <a href="#popup" class="btn btn--white">Book Now</a>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                             <p class="card__price-only">Only</p>
                                             <p class="card__price-value">$497</p>
                                         </div>
-                                        <a href="#" class="btn btn--white">Book Now</a>
+                                        <a href="#popup" class="btn btn--white">Book Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@
                                                 <p class="card__price-only">Only</p>
                                                 <p class="card__price-value">$797</p>
                                             </div>
-                                            <a href="#" class="btn btn--white">Book Now</a>
+                                            <a href="#popup" class="btn btn--white">Book Now</a>
                                         </div>
                                     </div>
                                 </div>
@@ -230,7 +230,7 @@
                 </div>
 
             </section>
-            <section class="section-story">
+            <section class="section-story" >
 
                 <div class="bg-video">
                     <video  class="bg-video__content" autoplay  muted loop>
@@ -365,7 +365,27 @@
                 </div>
             </div>
         </footer>
-
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">
+                        Start Booking Now!
+                    </h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Important &dash; Please read these terms before booking
+                    </h3>
+                    <p class="popup__text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit at imperdiet dui accumsan sit amet nulla. Sapien nec sagittis aliquam malesuada bibendum. Orci sagittis eu volutpat odio facilisis mauris sit amet massa. Nulla facilisi morbi tempus iaculis urna id volutpat lacus
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
         <!-- <section class="grid">
             <div class="row">
                 <div class="col-1-of-2">
